[package]
name = "octoling"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0 OR MIT"

[dependencies]
bytes = "1"
hex = "0.4"
hmac = "0.11"
futures = "0.3"
once_cell = "1.8"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
toml = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
warp = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
os_pipe = "0.9"
lxc-sys2 = { git = "https://github.com/Thog/lxc-sys2.git" }

[profile.release]
opt-level = 3
lto = "thin"